# PlateeRAG_backend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.base  Dockerfile.hpu  Dockerfile.minimal  Dockerfile.simple  IMPLEMENTATION_SUMMARY.md  OUTPUT_DEPENDENCY_IMPLEMENTATION_COMPLETE.md  README.md  README_RECOVERY.md  chat_api_test.py  chat_test.py  cleanup_orphaned_managers.py  direct_sql_test.py  docker-compose.yaml  exported_nodes.json  fix_existing_managers.py  gaudi_service.py  main.dev.py  main.py  main_admin.py  main_minimal.py  main_simple.py  mcp_node_sample.py  performance_test.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run.sh  simple_performance_test.py  test.py  test_api.py  test_auto_generation_api.py  test_epg2xml.py  test_feedback_loop.py  test_parsing.py  test_print_any_node.py  test_rag_config.py  test_refactor.py  (+2 more)
.github/workflows/: deploy.yaml
config/: README.md  base_config.py  config_composer.py  database_manager.py  persistent_config.py
config/sub_config/: app_config.py  collection_config.py  database_config.py  document-processor_config.py  email_config.py  gaudi_config.py  guarder_config.py  llm_config.py  node_config.py  openai_config.py  sgl_config.py  stt_config.py  tts_config.py  vast_config.py  vectordb_config.py  vllm_config.py  workflow_config.py
constants/: base_chat_workflow copy.json  base_chat_workflow.json  base_edge_template.json  collection_node_template.json  config.db  prompts_processed.csv
constants/workflow_store_template/: HR Teams Bot_Test_Routing_template.json  Schema_template(마케팅문구).json  기본_memory_template.json  문서참조_template_1.json  복잡_workflow.json
controller/: MCP_CONTROLLER_README.md  README.md  __init__.py  appController.py  authController.py  chatController.py  configController.py  controller_helper.py  dataManagerController.py  documentController.py  embeddingController.py  evalController.py  gaudiController.py  gaudiController_original.py  interactionController.py  llmController.py  mcpController.py  nodeApiController.py  nodeController.py  nodeStateController.py  performanceController.py  performanceRouter.py  promptController.py  ragController.py  retrievalController.py  sttController.py  trainController.py  ttsController.py  vastController.py  vast_proxy_controller.py  workflowController.py
controller/admin/: adminBaseController.py  adminDBController.py  adminDataScraperController.py  adminGroupController.py  adminHelper.py  adminPromptController.py  adminSystemController.py  adminUserController.py  adminUserTokenController.py  adminWorkflowController.py  router.py
controller/audio/: router.py  sttController.py  ttsController.py
controller/data_manager/: dataManagerBaseController.py  dataManagerProcessingController.py  dataManagerSyncController.py  router.py
controller/helper/: controllerHelper.py  singletonHelper.py
controller/huggingface/: huggingfaceController.py
controller/manager/: managerBaseController.py  managerGroupController.py  managerUserController.py  managerWorkflowController.py  router.py
controller/model/: modelController.py  router.py
controller/node/: nodeApiController.py  nodeController.py  nodeStateController.py  router.py
controller/rag/: documentController.py  embeddingController.py  folderController.py  helper.py  retrievalController.py  router.py  uploadProgressController.py
controller/tools/: router.py  toolStorageController.py  toolStoreController.py
controller/utils/: section_config.py
controller/workflow/: execution_runtime.py  helper.py  model.py  router.py  utils.py  websocket_support.py  workflowController.back.py  workflowController.py  workflowController_new.py  workflowDeployController.py
database/: __init__.py  connection.py
editor/: README.md  async_workflow_executor.py  node_composer.py  workflow_executor.py
editor/model/: node.py
editor/type_model/: feedback_state.py  node.py
editor/utils/: citation_prompt.py  compact_prompt.py  prefix_prompt.py
examples/: performance_example.py
models/: __init__.py  chat.py  executor.py  performance.py  persistent_config_model.py  user.py
prototypes/scheduler/: README.md  main.py  redis_utils.py  run_executor.py
qdrant_data/: raft_state.json
remote_vast_server/: Dockerfile  main.py  requirements.txt  run_remote_vast.sh
service/: README.md  __init__.py
service/data_manager/: __init__.py  data_manager.py  data_manager_helper.py  data_manager_register.py  db_sync_scheduler.py  encryption_helper.py  timezone_utils.py
service/data_scraper/: __init__.py  lock_manager.py  mock_store.py  repository.py  robots.py  run_executor.py  scheduler_manager.py  schemas.py  service.py
service/database/: __init__.py  connection.py  database_manager.py  execution_meta_service.py  logger_helper.py  performance_controller_helper.py
service/embedding/: __init__.py  base_embedding.py  cross_encoder_service.py  custom_http_embedding.py  embedding_factory.py  fastembed_service.py  huggingface_embedding.py  openai_embedding.py
service/epg2xml/: __init__.py  config.py  epg_json.py  utils.py
service/epg_lite/: __init__.py  epg_json.py  handler.py  models.py  utils.py
service/eval/: eval_run.py  evaluater.py  evaluator.py  pyproject.toml
service/general_function/: __init__.py  chat.py
service/guarder/: __init__.py  base_guarder.py  guarder_factory.py  qwen3guard_guarder.py
service/llm/: anthropic_service.py  gemini_service.py  llm_service.py  openai_service.py  sgl_service.py  vllm_service.py
service/mlflow/: mlflow_artifact_service.py
service/model/: __init__.py  mlflow_utils.py  model_deletion_service.py  model_inference_service.py  model_registry_service.py  sample_demo_model.py
service/monitoring/: performance_logger.py
service/rag/: __init__.py  document_processor.py  embedding_factory.py
service/retrieval/: __init__.py  document_processor.py  rag_service.py  sse_session_manager.py  test.py  upload_progress_manager.py
service/storage/: minio_client.py  redis_version_manager.py
service/stt/: huggingface_stt.py  (+1 more)
src/: node_composer.py  node_config.py  workflow_executor.py
(+224 files in other folders)
