[project]
name = "plateerag-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "fastapi==0.116.1",
    "filelock==3.18.0",
    "frozenlist==1.7.0",
    "fsspec<=2025.3.0",
    "greenlet==3.2.3",
    "grpcio==1.73.1",
    "h11==0.16.0",
    "h2==4.2.0",
    "hf-xet==1.1.5",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.33.4",
    "hyperframe==6.1.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-core==0.3.69",
    "langchain-openai==0.3.28",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.4.7",
    "lxml==6.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "minio>=7.2.16",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "mypy-extensions==1.1.0",
    "networkx==3.5",
    "numpy==2.3.2",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "openai==1.97.0",
    "orjson==3.11.0",
    "packaging==25.0",
    "pdf2image>=1.17.0",
    "pdfminer.six>=20201018",
    "pillow==11.3.0",
    "portalocker==2.10.1",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyjwt==2.8.0",
    "pynvml>=12.0.0",
    "pypdf2==3.0.1",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "qdrant-client==1.14.3",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "sentence-transformers==5.0.0",
    "setuptools==80.9.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.47.1",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "tqdm==4.67.1",
    "transformers==4.53.0",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "urllib3==2.2.3",
    "uvicorn==0.35.0",
    "yarl==1.20.1",
    "zstandard==0.23.0",
    "vastai==0.3.1",
    "huggingface_hub==0.33.4",
    "pymupdf==1.26.3",
    "openpyxl==3.1.5",
    "xlrd==2.0.2",
    "python-pptx>=1.0.2",
    "beautifulsoup4>=4.13.4",
    "ffmpeg-python==0.2.0",
    "torchaudio==2.7.1",
    "inflect>=7.5.0",
    "kanjize>=1.5.0",
    "phonemizer>=3.3.0",
    "sudachipy>=0.6.10",
    "sudachidict-full>=20241021",
    "soundfile>=0.13.1",
    "langgraph>=0.6.7",
    "PyGithub==2.8.1",
]
